force-app/main/default/objects/IT_Group_Code__c/IT_Group_Code__c.object-meta.xml
<CustomObject>
    <label>Group Code</label>
    <nameField>
        <label>Group Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>