force-app/main/default/objects/IT_Group_Code__c/fields/ER_Financial_Center__c.field-meta.xml
<CustomField>
    <fullName>ER_Financial_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Code</label>
    <referenceTo>ER_Financial_Center__c</referenceTo>
    <relationshipLabel>Groups Code</relationshipLabel>
    <relationshipName>Groups_Code</relationshipName>
    <type>Lookup</type>
</CustomField>