force-app/main/default/objects/IT_Group_Code__c/fields/IT_Commission_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>IT_Commission_Discount_Percentage__c</fullName>
    <formula>ER_Financial_Center__r.IT_Contract__r.IT_Commission_Discount_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount_Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>