force-app/main/default/objects/IT_Group_Code__c/fields/IT_Description__c.field-meta.xml
<CustomField>
    <fullName>IT_Description__c</fullName>
    <label>Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>