force-app/main/default/objects/IT_Group_Code__c/fields/IT_Future_Change_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Future_Change_Group_Code__c</fullName>
    <label>Future Change Group Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>