force-app/main/default/objects/IT_Group_Code__c/fields/IT_Group__c.field-meta.xml
<CustomField>
    <fullName>IT_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>IT_Group__c</referenceTo>
    <relationshipLabel>Groups Code</relationshipLabel>
    <relationshipName>Groups_Code</relationshipName>
    <type>Lookup</type>
</CustomField>