force-app/main/default/objects/IT_Group_Code__c/fields/IT_Group_Billing_Administrative_Data__c.field-meta.xml
<CustomField>
    <fullName>IT_Group_Billing_Administrative_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Billing Administrative Data</label>
    <type>Checkbox</type>
</CustomField>