force-app/main/default/objects/IT_Group_Code__c/fields/IT_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Group_Code__c</fullName>
    <label>Group Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>