force-app/main/default/objects/IT_Group_Code__c/fields/IT_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Group_Type__c</fullName>
    <label>Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Group_Type</valueSetName>
    </valueSet>
</CustomField>