force-app/main/default/objects/IT_Group_Code__c/fields/IT_Key_GroupCode__c.field-meta.xml
<CustomField>
    <fullName>IT_Key_GroupCode__c</fullName>
    <externalId>true</externalId>
    <label>Key_GroupCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>