force-app/main/default/objects/IT_Group_Code__c/fields/IT_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Legal_Name__c</fullName>
    <formula>ER_Financial_Center__r.ER_Account_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Name</label>
    <type>Text</type>
</CustomField>