force-app/main/default/objects/IT_Group_Code__c/fields/IT_Parent_Company_Client__c.field-meta.xml
<CustomField>
    <fullName>IT_Parent_Company_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent Company Client</label>
    <type>Checkbox</type>
</CustomField>