force-app/main/default/objects/IT_Group_Code__c/fields/IT_Sales_Account__c.field-meta.xml
<CustomField>
    <fullName>IT_Sales_Account__c</fullName>
    <formula>ER_Financial_Center__r.IT_Sales_Account__r.FirstName &amp; &quot; &quot; &amp; ER_Financial_Center__r.IT_Sales_Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Account</label>
    <type>Text</type>
</CustomField>