force-app/main/default/objects/IT_Group_Code__c/fields/IT_Status__c.field-meta.xml
<CustomField>
    <fullName>IT_Status__c</fullName>
    <formula>CASE( ER_Financial_Center__r.IT_Client_Status__c ,
					&quot;00&quot;,&quot;CLIENTE PROVVISORIO&quot;,
					&quot;01&quot;,&quot;IN DEFINIZIONE&quot;,
					&quot;02&quot;,&quot;ATTIVO&quot;,
					&quot;03&quot;,&quot;ANNULLATO&quot;,
					&quot;04&quot;,&quot;SOSPESO&quot;,
					&quot;05&quot;,&quot;DA ATTIVARE&quot;,
					&quot;06&quot;,&quot;DA SISTEMARE&quot;,
					&quot;07&quot;,&quot;POTENZIALE DA ESPADA&quot;,
					&quot;11&quot;,&quot;CLIENTI IN ATTESA DEL CODICE 6&quot;,
					&quot;12&quot;,&quot;IN DEFINIZIONE ONLINE&quot;,
					&quot;13&quot;,&quot;ANNULLATO MANCATO PAGAMENTO&quot;,
					&quot;98&quot;,&quot;CLIENTI IN DEF. PROBABILE CANC&quot;,
					&quot;10&quot;,&quot;DA CANCELLARE&quot;,
					&quot;08&quot;,&quot;ANNULLATO DEFINITIVAMENTEE&quot;,
					&quot;&quot;
					
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>