force-app/main/default/objects/IT_Group_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IT_Key_GroupCode__c</columns>
    <columns>IT_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutto</label>
</ListView>